# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1010 2009-09-22 13:04:23 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.5.0 beta1 (????/??/??)
 - (2009/09/22) Fixed bug#1027 - ticket csv export in customer interface incomplete.
 - (2009/09/21) Fixed bug#4218 - No error message when sending mail through not
    installed sendmail.
 - (2009/09/21) Fixed bug#4312 - MOTD module for Agent Dashboard, thanks to
    Alexander Scholler!
 - (2009/09/21) Fixed bug#3978 - Better description for PGP passphrases.
 - (2009/09/16) Fixed bug#3932 - Translation enhancements for AdminSession.dtl.
 - (2009/09/16) Fixed bug#2786 - Wrong text labels
    AdminSystemAddressForm.dtl.
 - (2009/09/16) Moved to global event handler Kernel/System/EventHander.pm
    for ticket events (config is compatble with old one).
 - (2009/09/15) Improved performance of the PDF backend.

2.4.5 (2009/??/??)
 - (2009/09/21) Fixed bug#4029 - S/MIME activation with misunderandable message/incomplete documentation.
 - (2009/09/21) Fixed bug#3408 - Richtext editor - editor windows is way to small.
 - (2009/09/21) Fixed bug#4188 - Moving junk mails unnecessarily need subject and body.
 - (2009/09/21) Fixed bug#4189 - RTE off inserts a blank line in the text editor field.
 - (2009/09/21) Fixed bug#4080 - Rich editors javascript overrides onload function.
 - (2009/09/21) Fixed bug#3818 - Customer History - Small/Medium/Preview does
    not work.
 - (2009/09/21) Fixed bug#2532 - Problem when setting queues and subqueues
    to invalid.
 - (2009/09/18) Updated Spanish translation, thanks to Gustavo Azambuja!
 - (2009/09/16) Fixed bug#4288 - 4288: Use of uninitialized value in
    AdminGenericAgent.pm.
 - (2009/09/16) Fixed bug#4292 - "<some@example.com>" in body breaks body on